# bevy_async_prototype

./: Cargo.toml  flake.nix  rust-toolchain-cranelift.toml  rust-toolchain.toml
examples/: build_hierarchy.rs
src/: api.rs  lib.rs  plugin.rs  system_channel.rs
